#------------------------------------------------------------------------------#
# serment/src/erme_response/test/CMakeLists.txt
#------------------------------------------------------------------------------#

message( "++ Adding erme_response tests." )

#------------------------------------------------------------------------------#
# Create test executables
#------------------------------------------------------------------------------#

#ADD_EXECUTABLE(test_StateERME			test_StateERME.cc)
#TARGET_LINK_LIBRARIES(test_StateERME 	erme)

#------------------------------------------------------------------------------#
# Define tests
#------------------------------------------------------------------------------#

#ADD_TEST(test_StateERME test_StateERME 0)
